package api

import (
	"context"
	"testing"

	"connectrpc.com/connect"
	"github.com/furisto/construct/api/go/client"
	v1 "github.com/furisto/construct/api/go/v1"
	"github.com/furisto/construct/backend/memory"
	"github.com/furisto/construct/backend/memory/test"
	"github.com/google/go-cmp/cmp"
	"github.com/google/go-cmp/cmp/cmpopts"
	"github.com/google/uuid"
	"google.golang.org/protobuf/testing/protocmp"
	_ "modernc.org/sqlite"
)

func TestCreateTask(t *testing.T) {
	setup := ServiceTestSetup[v1.CreateTaskRequest, v1.CreateTaskResponse]{
		Call: func(ctx context.Context, client *client.Client, req *connect.Request[v1.CreateTaskRequest]) (*connect.Response[v1.CreateTaskResponse], error) {
			return client.Task().CreateTask(ctx, req)
		},
		CmpOptions: []cmp.Option{
			cmpopts.IgnoreUnexported(v1.CreateTaskResponse{}, v1.Task{}, v1.TaskMetadata{}, v1.TaskSpec{}, v1.TaskStatus{}, v1.TaskUsage{}),
			protocmp.Transform(),
			protocmp.IgnoreFields(&v1.Task{}, "metadata"),
		},
	}

	agentID := uuid.New()
	modelID := uuid.New()

	setup.RunServiceTests(t, []ServiceTestScenario[v1.CreateTaskRequest, v1.CreateTaskResponse]{
		{
			Name: "invalid agent ID format",
			Request: &v1.CreateTaskRequest{
				AgentId:          "not-a-valid-uuid",
				ProjectDirectory: "/tmp/test",
			},
			Expected: ServiceTestExpectation[v1.CreateTaskResponse]{
				Error: "invalid_argument: invalid agent ID format: invalid UUID length: 16",
			},
		},
		{
			Name: "agent not found",
			Request: &v1.CreateTaskRequest{
				AgentId:          agentID.String(),
				ProjectDirectory: "/tmp/test",
			},
			Expected: ServiceTestExpectation[v1.CreateTaskResponse]{
				Error: "not_found: agent not found",
			},
		},
		{
			Name: "success",
			SeedDatabase: func(ctx context.Context, db *memory.Client) {
				modelProvider := test.NewModelProviderBuilder(t, uuid.New(), db).Build(ctx)
				model := test.NewModelBuilder(t, modelID, db, modelProvider).Build(ctx)

				test.NewAgentBuilder(t, agentID, db, model).Build(ctx)
			},
			Request: &v1.CreateTaskRequest{
				AgentId:          agentID.String(),
				ProjectDirectory: "/tmp/test",
			},
			Expected: ServiceTestExpectation[v1.CreateTaskResponse]{
				Response: v1.CreateTaskResponse{
					Task: &v1.Task{
						Metadata: &v1.TaskMetadata{},
						Spec: &v1.TaskSpec{
							AgentId:      strPtr(agentID.String()),
							Workspace:    "/tmp/test",
							DesiredPhase: v1.TaskPhase_TASK_PHASE_RUNNING,
						},
						Status: &v1.TaskStatus{
							Usage: &v1.TaskUsage{},
							Phase: v1.TaskPhase_TASK_PHASE_AWAITING,
						},
					},
				},
			},
		},
	})
}

func TestGetTask(t *testing.T) {
	setup := ServiceTestSetup[v1.GetTaskRequest, v1.GetTaskResponse]{
		Call: func(ctx context.Context, client *client.Client, req *connect.Request[v1.GetTaskRequest]) (*connect.Response[v1.GetTaskResponse], error) {
			return client.Task().GetTask(ctx, req)
		},
		CmpOptions: []cmp.Option{
			cmpopts.IgnoreUnexported(v1.GetTaskResponse{}, v1.Task{}, v1.TaskMetadata{}, v1.TaskSpec{}, v1.TaskStatus{}, v1.TaskUsage{}),
			protocmp.Transform(),
			protocmp.IgnoreFields(&v1.TaskMetadata{}, "created_at", "updated_at"),
		},
	}

	taskID := uuid.New()
	agentID := uuid.New()
	modelID := uuid.New()

	setup.RunServiceTests(t, []ServiceTestScenario[v1.GetTaskRequest, v1.GetTaskResponse]{
		{
			Name: "invalid id format",
			Request: &v1.GetTaskRequest{
				Id: "not-a-valid-uuid",
			},
			Expected: ServiceTestExpectation[v1.GetTaskResponse]{
				Error: "invalid_argument: invalid task ID format: invalid UUID length: 16",
			},
		},
		{
			Name: "task not found",
			Request: &v1.GetTaskRequest{
				Id: taskID.String(),
			},
			Expected: ServiceTestExpectation[v1.GetTaskResponse]{
				Error: "not_found: task not found",
			},
		},
		{
			Name: "success",
			SeedDatabase: func(ctx context.Context, db *memory.Client) {
				modelProvider := test.NewModelProviderBuilder(t, uuid.New(), db).Build(ctx)
				model := test.NewModelBuilder(t, modelID, db, modelProvider).Build(ctx)

				agent := test.NewAgentBuilder(t, agentID, db, model).Build(ctx)
				test.NewTaskBuilder(t, taskID, db, agent).Build(ctx)
			},
			Request: &v1.GetTaskRequest{
				Id: taskID.String(),
			},
			Expected: ServiceTestExpectation[v1.GetTaskResponse]{
				Response: v1.GetTaskResponse{
					Task: &v1.Task{
						Metadata: &v1.TaskMetadata{
							Id: taskID.String(),
						},
						Spec: &v1.TaskSpec{
							AgentId:      strPtr(agentID.String()),
							DesiredPhase: v1.TaskPhase_TASK_PHASE_RUNNING,
						},
						Status: &v1.TaskStatus{
							Usage: &v1.TaskUsage{},
							Phase: v1.TaskPhase_TASK_PHASE_AWAITING,
						},
					},
				},
			},
		},
	})
}

func TestListTasks(t *testing.T) {
	setup := ServiceTestSetup[v1.ListTasksRequest, v1.ListTasksResponse]{
		Call: func(ctx context.Context, client *client.Client, req *connect.Request[v1.ListTasksRequest]) (*connect.Response[v1.ListTasksResponse], error) {
			return client.Task().ListTasks(ctx, req)
		},
		CmpOptions: []cmp.Option{
			cmpopts.IgnoreUnexported(v1.ListTasksResponse{}, v1.Task{}, v1.TaskMetadata{}, v1.TaskSpec{}, v1.TaskStatus{}, v1.TaskUsage{}),
			protocmp.Transform(),
			protocmp.IgnoreFields(&v1.TaskMetadata{}, "created_at", "updated_at"),
		},
	}

	taskID1 := uuid.New()
	taskID2 := uuid.New()
	agentID := uuid.New()
	modelID := uuid.New()

	setup.RunServiceTests(t, []ServiceTestScenario[v1.ListTasksRequest, v1.ListTasksResponse]{
		{
			Name:    "empty list",
			Request: &v1.ListTasksRequest{},
			Expected: ServiceTestExpectation[v1.ListTasksResponse]{
				Response: v1.ListTasksResponse{
					Tasks: []*v1.Task{},
				},
			},
		},
		{
			Name: "filter by agent ID",
			SeedDatabase: func(ctx context.Context, db *memory.Client) {
				modelProvider := test.NewModelProviderBuilder(t, uuid.New(), db).Build(ctx)
				model := test.NewModelBuilder(t, modelID, db, modelProvider).Build(ctx)

				agent1 := test.NewAgentBuilder(t, agentID, db, model).
					WithName("agent-1").
					Build(ctx)
				agent2 := test.NewAgentBuilder(t, uuid.New(), db, model).
					WithID(uuid.New()).
					WithName("agent-2").
					Build(ctx)
				test.NewTaskBuilder(t, taskID1, db, agent1).Build(ctx)
				test.NewTaskBuilder(t, taskID2, db, agent2).Build(ctx)
			},
			Request: &v1.ListTasksRequest{
				Filter: &v1.ListTasksRequest_Filter{
					AgentId: strPtr(agentID.String()),
				},
			},
			Expected: ServiceTestExpectation[v1.ListTasksResponse]{
				Response: v1.ListTasksResponse{
					Tasks: []*v1.Task{
						{
							Metadata: &v1.TaskMetadata{
								Id: taskID1.String(),
							},
							Spec: &v1.TaskSpec{
								AgentId:      strPtr(agentID.String()),
								DesiredPhase: v1.TaskPhase_TASK_PHASE_RUNNING,
							},
							Status: &v1.TaskStatus{
								Usage: &v1.TaskUsage{},
								Phase: v1.TaskPhase_TASK_PHASE_AWAITING,
							},
						},
					},
				},
			},
		},
		{
			Name: "invalid agent ID format",
			Request: &v1.ListTasksRequest{
				Filter: &v1.ListTasksRequest_Filter{
					AgentId: strPtr("not-a-valid-uuid"),
				},
			},
			Expected: ServiceTestExpectation[v1.ListTasksResponse]{
				Error: "invalid_argument: invalid agent ID format: invalid UUID length: 16",
			},
		},
		{
			Name: "multiple tasks",
			SeedDatabase: func(ctx context.Context, db *memory.Client) {
				modelProvider := test.NewModelProviderBuilder(t, uuid.New(), db).Build(ctx)
				model := test.NewModelBuilder(t, modelID, db, modelProvider).Build(ctx)

				agent1 := test.NewAgentBuilder(t, agentID, db, model).Build(ctx)

				test.NewTaskBuilder(t, taskID1, db, agent1).Build(ctx)
				test.NewTaskBuilder(t, taskID2, db, agent1).Build(ctx)
			},
			Request: &v1.ListTasksRequest{},
			Expected: ServiceTestExpectation[v1.ListTasksResponse]{
				Response: v1.ListTasksResponse{
					Tasks: []*v1.Task{
						{
							Metadata: &v1.TaskMetadata{
								Id: taskID2.String(),
							},
							Spec: &v1.TaskSpec{
								AgentId:      strPtr(agentID.String()),
								DesiredPhase: v1.TaskPhase_TASK_PHASE_RUNNING,
							},
							Status: &v1.TaskStatus{
								Usage: &v1.TaskUsage{},
								Phase: v1.TaskPhase_TASK_PHASE_AWAITING,
							},
						},
						{
							Metadata: &v1.TaskMetadata{
								Id: taskID1.String(),
							},
							Spec: &v1.TaskSpec{
								AgentId:      strPtr(agentID.String()),
								DesiredPhase: v1.TaskPhase_TASK_PHASE_RUNNING,
							},
							Status: &v1.TaskStatus{
								Usage: &v1.TaskUsage{},
								Phase: v1.TaskPhase_TASK_PHASE_AWAITING,
							},
						},
					},
				},
			},
		},
		{
			Name: "filter by task ID prefix",
			SeedDatabase: func(ctx context.Context, db *memory.Client) {
				modelProvider := test.NewModelProviderBuilder(t, uuid.New(), db).Build(ctx)
				model := test.NewModelBuilder(t, modelID, db, modelProvider).Build(ctx)

				agent1 := test.NewAgentBuilder(t, agentID, db, model).Build(ctx)

				test.NewTaskBuilder(t, taskID1, db, agent1).Build(ctx)
				test.NewTaskBuilder(t, taskID2, db, agent1).Build(ctx)
			},
			Request: &v1.ListTasksRequest{
				Filter: &v1.ListTasksRequest_Filter{
					TaskIdPrefix: strPtr(taskID1.String()[:8]),
				},
			},
			Expected: ServiceTestExpectation[v1.ListTasksResponse]{
				Response: v1.ListTasksResponse{
					Tasks: []*v1.Task{
						{
							Metadata: &v1.TaskMetadata{
								Id: taskID1.String(),
							},
							Spec: &v1.TaskSpec{
								AgentId:      strPtr(agentID.String()),
								DesiredPhase: v1.TaskPhase_TASK_PHASE_RUNNING,
							},
							Status: &v1.TaskStatus{
								Usage: &v1.TaskUsage{},
								Phase: v1.TaskPhase_TASK_PHASE_AWAITING,
							},
						},
					},
				},
			},
		},
	})
}

func TestUpdateTask(t *testing.T) {
	setup := ServiceTestSetup[v1.UpdateTaskRequest, v1.UpdateTaskResponse]{
		Call: func(ctx context.Context, client *client.Client, req *connect.Request[v1.UpdateTaskRequest]) (*connect.Response[v1.UpdateTaskResponse], error) {
			return client.Task().UpdateTask(ctx, req)
		},
		CmpOptions: []cmp.Option{
			cmpopts.IgnoreUnexported(v1.UpdateTaskResponse{}, v1.Task{}, v1.TaskMetadata{}, v1.TaskSpec{}, v1.TaskStatus{}, v1.TaskUsage{}),
			protocmp.Transform(),
			protocmp.IgnoreFields(&v1.TaskMetadata{}, "created_at", "updated_at"),
		},
	}

	taskID := uuid.New()
	agentID := uuid.New()
	agentID2 := uuid.New()
	modelID := uuid.New()

	setup.RunServiceTests(t, []ServiceTestScenario[v1.UpdateTaskRequest, v1.UpdateTaskResponse]{
		{
			Name: "invalid task ID format",
			Request: &v1.UpdateTaskRequest{
				Id: "not-a-valid-uuid",
			},
			Expected: ServiceTestExpectation[v1.UpdateTaskResponse]{
				Error: "invalid_argument: invalid task ID format: invalid UUID length: 16",
			},
		},
		{
			Name: "task not found",
			Request: &v1.UpdateTaskRequest{
				Id:      taskID.String(),
				AgentId: strPtr(agentID.String()),
			},
			Expected: ServiceTestExpectation[v1.UpdateTaskResponse]{
				Error: "not_found: task not found",
			},
		},
		{
			Name: "invalid agent ID format",
			SeedDatabase: func(ctx context.Context, db *memory.Client) {
				modelProvider := test.NewModelProviderBuilder(t, uuid.New(), db).Build(ctx)
				model := test.NewModelBuilder(t, modelID, db, modelProvider).Build(ctx)

				agent := test.NewAgentBuilder(t, agentID, db, model).Build(ctx)
				test.NewTaskBuilder(t, taskID, db, agent).Build(ctx)
			},
			Request: &v1.UpdateTaskRequest{
				Id:      taskID.String(),
				AgentId: strPtr("not-a-valid-uuid"),
			},
			Expected: ServiceTestExpectation[v1.UpdateTaskResponse]{
				Error: "invalid_argument: invalid agent ID format: invalid UUID length: 16",
			},
		},
		{
			Name: "agent not found",
			SeedDatabase: func(ctx context.Context, db *memory.Client) {
				modelProvider := test.NewModelProviderBuilder(t, uuid.New(), db).Build(ctx)
				model := test.NewModelBuilder(t, modelID, db, modelProvider).Build(ctx)

				agent := test.NewAgentBuilder(t, agentID, db, model).Build(ctx)
				test.NewTaskBuilder(t, taskID, db, agent).Build(ctx)
			},
			Request: &v1.UpdateTaskRequest{
				Id:      taskID.String(),
				AgentId: strPtr(agentID2.String()),
			},
			Expected: ServiceTestExpectation[v1.UpdateTaskResponse]{
				Error: "not_found: agent not found",
			},
		},
		{
			Name: "success - update agent",
			SeedDatabase: func(ctx context.Context, db *memory.Client) {
				modelProvider := test.NewModelProviderBuilder(t, uuid.New(), db).Build(ctx)
				model := test.NewModelBuilder(t, modelID, db, modelProvider).Build(ctx)

				agent1 := test.NewAgentBuilder(t, agentID, db, model).
					WithName("agent-1").
					Build(ctx)
				test.NewAgentBuilder(t, agentID2, db, model).
					WithName("agent-2").
					Build(ctx)
				test.NewTaskBuilder(t, taskID, db, agent1).Build(ctx)
			},
			Request: &v1.UpdateTaskRequest{
				Id:      taskID.String(),
				AgentId: strPtr(agentID2.String()),
			},
			Expected: ServiceTestExpectation[v1.UpdateTaskResponse]{
				Response: v1.UpdateTaskResponse{
					Task: &v1.Task{
						Metadata: &v1.TaskMetadata{
							Id: taskID.String(),
						},
						Spec: &v1.TaskSpec{
							AgentId:      strPtr(agentID2.String()),
							DesiredPhase: v1.TaskPhase_TASK_PHASE_RUNNING,
						},
						Status: &v1.TaskStatus{
							Usage: &v1.TaskUsage{},
							Phase: v1.TaskPhase_TASK_PHASE_AWAITING,
						},
					},
				},
			},
		},
	})
}

func TestDeleteTask(t *testing.T) {
	setup := ServiceTestSetup[v1.DeleteTaskRequest, v1.DeleteTaskResponse]{
		Call: func(ctx context.Context, client *client.Client, req *connect.Request[v1.DeleteTaskRequest]) (*connect.Response[v1.DeleteTaskResponse], error) {
			return client.Task().DeleteTask(ctx, req)
		},
		CmpOptions: []cmp.Option{
			cmpopts.IgnoreUnexported(v1.DeleteTaskResponse{}),
			protocmp.Transform(),
		},
	}

	taskID := uuid.MustParse("01234567-89ab-cdef-0123-456789abcdef")
	agentID := uuid.MustParse("98765432-10fe-dcba-9876-543210fedcba")
	modelID := uuid.MustParse("11111111-2222-3333-4444-555555555555")

	setup.RunServiceTests(t, []ServiceTestScenario[v1.DeleteTaskRequest, v1.DeleteTaskResponse]{
		{
			Name: "invalid id format",
			Request: &v1.DeleteTaskRequest{
				Id: "not-a-valid-uuid",
			},
			Expected: ServiceTestExpectation[v1.DeleteTaskResponse]{
				Error: "invalid_argument: invalid task ID format: invalid UUID length: 16",
			},
		},
		{
			Name: "task not found",
			Request: &v1.DeleteTaskRequest{
				Id: taskID.String(),
			},
			Expected: ServiceTestExpectation[v1.DeleteTaskResponse]{
				Error: "not_found: task not found",
			},
		},
		{
			Name: "success",
			SeedDatabase: func(ctx context.Context, db *memory.Client) {
				modelProvider := test.NewModelProviderBuilder(t, uuid.New(), db).Build(ctx)
				model := test.NewModelBuilder(t, modelID, db, modelProvider).Build(ctx)

				agent := test.NewAgentBuilder(t, agentID, db, model).
					WithName("test-agent").
					WithDescription("Test agent description").
					WithInstructions("Test agent instructions").
					Build(ctx)

				test.NewTaskBuilder(t, taskID, db, agent).Build(ctx)
			},
			Request: &v1.DeleteTaskRequest{
				Id: taskID.String(),
			},
			Expected: ServiceTestExpectation[v1.DeleteTaskResponse]{
				Response: v1.DeleteTaskResponse{},
			},
		},
	})
}
